add skeleton loader

--- a/index.html
+++ b/index.html
@@ -50,14 +50,28 @@
     <h2 class="categoriesPreview-title">Categorías</h2>
 
     <article class="categoriesPreview-list">
-      <!-- <div class="category-container">
+      <div class="category-container category-container--loading"></div>
+      <div class="category-container category-container--loading"></div>
+      <div class="category-container category-container--loading"></div>
+      <div class="category-container category-container--loading"></div>
+      <div class="category-container category-container--loading"></div>
+      <div class="category-container category-container--loading"></div>
+      <div class="category-container category-container--loading"></div>
+      <div class="category-container category-container--loading"></div>
+<!--       <div class="category-container">
         <h3 id="id28" class="category-title">Romance</h3>
       </div> -->
     </article>
   </section>
 
   <section id="genericList" class="genericList-container inactive">
-    <div class="movie-container">
+    <div class="movie-container movie-container--loading"></div>
+    <div class="movie-container movie-container--loading"></div>
+    <div class="movie-container movie-container--loading"></div>
+    <div class="movie-container movie-container--loading"></div>
+
+
+    <!-- <div class="movie-container">
       <img
         src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
         class="movie-img"
@@ -71,15 +85,7 @@
         class="movie-img"
         alt="Nombre de la película"
       />
-    </div>
-
-    <div class="movie-container">
-      <img
-        src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
-        class="movie-img"
-        alt="Nombre de la película"
-      />
-    </div>
+    </div> -->
   </section>
 
   <section id="movieDetail" class="movieDetail-container inactive">
