--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
     
       <footer>Developed By RackDev</footer>
     </div>
+
+  <script>
+      window.API_KEY = '${process.env.API_KEY}';
+  </script>
   
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./src/secrets.js"></script>
