--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </div>
 
   <script>
-      window.API_KEY = '${process.env.API_KEY}';
+      window.API_KEY = '83007214ec7e70678d88891a4b709aed';
   </script>
   
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
